--- a/src/mavsdk/CMakeLists.txt
+++ b/src/mavsdk/CMakeLists.txt
@@ -2,8 +2,17 @@ add_library(mavsdk)
 
 cmake_policy(SET CMP0076 NEW)
 
-add_subdirectory(core)
-add_subdirectory(plugins)
+
+#=============================================================================
+# generate mavlink headers
+#
+add_custom_target(
+   mav_gen
+   COMMAND ${SDK_SOURCE_DIR}/mavlink_generator/createSDKHeader ${SDK_SOURCE_DIR}
+   COMMENT "Generating Mavlink Headers"
+   VERBATIM
+)
+
 
 hunter_add_package(jsoncpp)
 find_package(jsoncpp REQUIRED)
@@ -28,5 +37,11 @@ endif()
 target_include_directories(mavsdk SYSTEM
     PRIVATE ../third_party/mavlink/include
 )
+
+add_dependencies(mavsdk mav_gen)
+
+add_subdirectory(core)
+add_subdirectory(plugins)
+
 
 set(UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES} PARENT_SCOPE)
