--- a/src/mavsdk/plugins/gimbal/CMakeLists.txt
+++ b/src/mavsdk/plugins/gimbal/CMakeLists.txt
@@ -1,17 +1,17 @@
-target_sources(mavsdk
-    PRIVATE
-    gimbal.cpp
-    gimbal_impl.cpp
-    gimbal_protocol_v1.cpp
-    gimbal_protocol_v2.cpp
-)
-
-target_include_directories(mavsdk PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-    )
-
-install(FILES
-    include/plugins/gimbal/gimbal.h
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/gimbal
-)
+# WINGTRA: DISABLE target_sources(mavsdk
+# WINGTRA: DISABLE     PRIVATE
+# WINGTRA: DISABLE     gimbal.cpp
+# WINGTRA: DISABLE     gimbal_impl.cpp
+# WINGTRA: DISABLE     gimbal_protocol_v1.cpp
+# WINGTRA: DISABLE     gimbal_protocol_v2.cpp
+# WINGTRA: DISABLE )
+# WINGTRA: DISABLE 
+# WINGTRA: DISABLE target_include_directories(mavsdk PUBLIC
+# WINGTRA: DISABLE     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+# WINGTRA: DISABLE     $<INSTALL_INTERFACE:include>
+# WINGTRA: DISABLE     )
+# WINGTRA: DISABLE 
+# WINGTRA: DISABLE install(FILES
+# WINGTRA: DISABLE     include/plugins/gimbal/gimbal.h
+# WINGTRA: DISABLE     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/gimbal
+# WINGTRA: DISABLE )
