--- a/src/mavsdk/plugins/failure/CMakeLists.txt
+++ b/src/mavsdk/plugins/failure/CMakeLists.txt
@@ -1,15 +1,15 @@
-target_sources(mavsdk
-    PRIVATE
-    failure.cpp
-    failure_impl.cpp
-)
-
-target_include_directories(mavsdk PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-    )
-
-install(FILES
-    include/plugins/failure/failure.h
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/failure
-)
+# WINGTRA: DISABLE target_sources(mavsdk
+# WINGTRA: DISABLE     PRIVATE
+# WINGTRA: DISABLE     failure.cpp
+# WINGTRA: DISABLE     failure_impl.cpp
+# WINGTRA: DISABLE )
+# WINGTRA: DISABLE 
+# WINGTRA: DISABLE target_include_directories(mavsdk PUBLIC
+# WINGTRA: DISABLE     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+# WINGTRA: DISABLE     $<INSTALL_INTERFACE:include>
+# WINGTRA: DISABLE     )
+# WINGTRA: DISABLE 
+# WINGTRA: DISABLE install(FILES
+# WINGTRA: DISABLE     include/plugins/failure/failure.h
+# WINGTRA: DISABLE     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/failure
+# WINGTRA: DISABLE )
