tools: rename start/stop SITL scripts

--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -101,12 +101,12 @@ add_test(integration_tests
 add_custom_command(TARGET integration_tests_runner
     POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        ${CMAKE_CURRENT_SOURCE_DIR}/../../tools/start_px4_sitl.sh
+        ${CMAKE_CURRENT_SOURCE_DIR}/../../tools/start_sitl.sh
         ${CMAKE_CURRENT_BINARY_DIR}
 )
 add_custom_command(TARGET integration_tests_runner
     POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        ${CMAKE_CURRENT_SOURCE_DIR}/../../tools/stop_px4_sitl.sh
+        ${CMAKE_CURRENT_SOURCE_DIR}/../../tools/stop_sitl.sh
         ${CMAKE_CURRENT_BINARY_DIR}
 )
