examples: build and fix logfile example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(ftp_server)
 add_subdirectory(geofence_inclusion)
 add_subdirectory(gimbal)
 add_subdirectory(gimbal_device_tester)
+add_subdirectory(logfile_download)
 add_subdirectory(manual_control)
 add_subdirectory(mavshell)
 add_subdirectory(multiple_drones)
