mavlink: generate from xml at build time
This allows us to swap out the dialect by passing it to cmake at
configure time: e.g. -DMAVLINK_DIALECT=common

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "mavsdk-proto"]
 	path = proto
 	url = https://github.com/mavlink/MAVSDK-Proto.git
+[submodule "src/third_party/mavlink"]
+	path = src/third_party/mavlink
+	url = https://github.com/mavlink/mavlink.git
