--- a/src/mavsdk/CMakeLists.txt
+++ b/src/mavsdk/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(mavsdk)
 
+add_dependencies(mavsdk mavlink)
+
 cmake_policy(SET CMP0076 NEW)
 
 add_subdirectory(core)
@@ -24,9 +26,8 @@ if (NOT APPLE AND NOT ANDROID AND NOT MSVC)
     )
 endif()
 
-
-target_include_directories(mavsdk SYSTEM
-    PRIVATE ../third_party/mavlink/include
+target_include_directories(mavsdk
+    SYSTEM PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../third_party/include
 )
 
 set(UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES} PARENT_SCOPE)
