--- a/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
+++ b/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
@@ -7,16 +7,17 @@ target_sources(mavsdk
 target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../core/>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/../../../mavsdk/core/>
     $<INSTALL_INTERFACE:include>
     )
 
 install(FILES
     include/plugins/mavlink_passthrough/mavlink_passthrough.h
-    ../../core/mavlink_include.h
+    ${CMAKE_CURRENT_BINARY_DIR}/../../../mavsdk/core/mavlink_include.h
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/mavlink_passthrough
 )
 
 install(DIRECTORY
-    ../../../third_party/mavlink/include/mavlink
+    ${CMAKE_CURRENT_BINARY_DIR}/../../../third_party/include/
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/mavlink_passthrough
 )
