--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -58,12 +58,14 @@ target_include_directories(integration_tests_runner
     ${PROJECT_SOURCE_DIR}/mavsdk/core
 )
 
+add_dependencies(integration_tests_runner mavlink)
+
 # SYSTEM because we don't want warnings for gtest headers.
 target_include_directories(integration_tests_runner
-    PRIVATE
-    SYSTEM ${PROJECT_SOURCE_DIR}/third_party/gtest/googletest/include
-    SYSTEM ${PROJECT_SOURCE_DIR}/third_party/gtest/googlemock/include
-    SYSTEM ${PROJECT_SOURCE_DIR}/third_party/mavlink/include
+    SYSTEM
+    PRIVATE ${PROJECT_SOURCE_DIR}/third_party/gtest/googletest/include
+    PRIVATE ${PROJECT_SOURCE_DIR}/third_party/gtest/googlemock/include
+    PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../third_party/include
 )
 
 if(MSVC)
