--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -58,14 +58,13 @@ target_include_directories(integration_tests_runner
     ${PROJECT_SOURCE_DIR}/mavsdk/core
 )
 
-add_dependencies(integration_tests_runner mavlink)
-
 # SYSTEM because we don't want warnings for gtest headers.
 target_include_directories(integration_tests_runner
     SYSTEM
     PRIVATE ${PROJECT_SOURCE_DIR}/third_party/gtest/googletest/include
     PRIVATE ${PROJECT_SOURCE_DIR}/third_party/gtest/googlemock/include
     PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../third_party/include
+    PRIVATE ${MAVLINK_HEADERS}
 )
 
 if(MSVC)
