--- a/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
+++ b/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
@@ -6,7 +6,6 @@ target_sources(mavsdk
 
 target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../core/>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/../../../mavsdk/core/>
     $<INSTALL_INTERFACE:include>
     )
@@ -18,6 +17,6 @@ install(FILES
 )
 
 install(DIRECTORY
-    ${CMAKE_CURRENT_BINARY_DIR}/../../../third_party/include/
+    ${MAVLINK_HEADERS}
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/mavlink_passthrough
 )
