--- a/docker/Dockerfile-Ubuntu-20.04
+++ b/docker/Dockerfile-Ubuntu-20.04
@@ -32,6 +32,7 @@ RUN apt-get update \
         ninja-build \
         python3 \
         python3-pip \
+        python3-future \
         ruby-dev \
         software-properties-common \
         sudo \
