--- a/docker/Dockerfile-Ubuntu-20.04-PX4-SITL-v1.11
+++ b/docker/Dockerfile-Ubuntu-20.04-PX4-SITL-v1.11
@@ -1,5 +1,5 @@
 #
-# PX4 v1.11.2 SITL testing environment for MAVSDK based on Ubuntu 20.04.
+# PX4 v1.11.3 SITL testing environment for MAVSDK based on Ubuntu 20.04.
 # Author: Julian Oes <julian@oes.ch>
 #
 FROM mavsdk/mavsdk-ubuntu-20.04
@@ -8,7 +8,7 @@ MAINTAINER Julian Oes <julian@oes.ch>
 ENV FIRMWARE_DIR ${WORKDIR}../Firmware
 
 RUN apt-get update && \
-    apt-get install -y git locales \
+    apt-get install -y git locales psmisc gpg-agent \
     && apt-get -y autoremove \
     && apt-get clean autoclean \
     && rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
@@ -19,7 +19,8 @@ ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
 
 RUN git clone https://github.com/PX4/Firmware.git ${FIRMWARE_DIR}
-RUN git -C ${FIRMWARE_DIR} checkout v1.11.2
+RUN git -C ${FIRMWARE_DIR} checkout v1.11.3
 RUN git -C ${FIRMWARE_DIR} submodule update --init --recursive
+RUN wget http://packages.osrfoundation.org/gazebo.key -O - | sudo apt-key add -
 RUN cd ${FIRMWARE_DIR} && Tools/setup/ubuntu.sh --no-nuttx
 RUN cd ${FIRMWARE_DIR} && DONT_RUN=1 make px4_sitl gazebo && DONT_RUN=1 make px4_sitl gazebo
