--- a/src/mavsdk/plugins/CMakeLists.txt
+++ b/src/mavsdk/plugins/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(telemetry)
 add_subdirectory(telemetry_server)
 add_subdirectory(tracking_server)
 add_subdirectory(transponder)
+add_subdirectory(rtk)
 add_subdirectory(tune)
 
 set(UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES} PARENT_SCOPE)
