system_tests: add test for mission upload

--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(system_tests_runner
     system_tests_helper.cpp
     param_set_and_get.cpp
     param_custom_set_and_get.cpp
+    mission_raw_upload.cpp
 )
 
 target_include_directories(system_tests_runner
