core: forgot to install header

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -114,6 +114,7 @@ install(FILES
     include/mavsdk/mavsdk.h
     include/mavsdk/log_callback.h
     include/mavsdk/plugin_base.h
+    include/mavsdk/server_plugin_base.h
     include/mavsdk/geometry.h
     include/mavsdk/server_component.h
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mavsdk"
