--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(system_tests_runner
     ../mavsdk/core/unittests_main.cpp
     camera_take_photo.cpp
+    component_information.cpp
     action_arm_disarm.cpp
     system_tests_helper.cpp
     param_set_and_get.cpp
