cmake/tools: generate grpc_server, list plugins
This is refactoring around the way the plugins are built into the mavsdk
library as well as the mavsdk_server executable.

The changes contain the following:
- Auto-generation of grpc_server.h and grpc_server.cpp from jinja2
  templates. This means that the mavsdk_server is always in sync and
  new plugins don't have to be added to it manually anymore.
- As a side effects this removes the ugly rewriting of CMakeLists.txt
  based on the auto-generated plugins and instead uses a separate
  plugins.txt file that is used throughout.
- The cmake variable ENABLED_PLUGINS can be used to manually select the
  plugins to be built for users requiring to do so.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,6 +54,16 @@ else()
     set(lib_path "lib")
 endif()
 
+if (ENABLED_PLUGINS)
+    message(STATUS "Manually enabled plugins:")
+    foreach(plugin ${ENABLED_PLUGINS})
+        message(STATUS "  - ${plugin}")
+    endforeach()
+else()
+    message(STATUS "All plugins enabled")
+    file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/plugins.txt" ENABLED_PLUGINS)
+endif()
+
 add_subdirectory(mavsdk)
 
 include(cmake/static_analyzers.cmake)
