--- a/src/mavsdk/plugins/CMakeLists.txt
+++ b/src/mavsdk/plugins/CMakeLists.txt
@@ -1,33 +1,8 @@
-add_subdirectory(action)
-add_subdirectory(action_server)
-add_subdirectory(calibration)
-add_subdirectory(camera)
-add_subdirectory(camera_server)
-add_subdirectory(component_information)
-add_subdirectory(component_information_server)
-add_subdirectory(failure)
-add_subdirectory(follow_me)
-add_subdirectory(ftp)
-add_subdirectory(geofence)
-add_subdirectory(gimbal)
-add_subdirectory(info)
-add_subdirectory(log_files)
-add_subdirectory(manual_control)
+foreach(plugin ${ENABLED_PLUGINS})
+    add_subdirectory(${plugin})
+endforeach()
+
+# Don't forget about mavlink_passthrough which is not auto-generated.
 add_subdirectory(mavlink_passthrough)
-add_subdirectory(mission)
-add_subdirectory(mission_raw)
-add_subdirectory(mission_raw_server)
-add_subdirectory(mocap)
-add_subdirectory(offboard)
-add_subdirectory(param)
-add_subdirectory(param_server)
-add_subdirectory(server_utility)
-add_subdirectory(shell)
-add_subdirectory(telemetry)
-add_subdirectory(tracking_server)
-add_subdirectory(transponder)
-add_subdirectory(rtk)
-add_subdirectory(telemetry_server)
-add_subdirectory(tune)
 
 set(UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES} PARENT_SCOPE)
