system_tests: add test to get all params

--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(system_tests_runner
     action_arm_disarm.cpp
     system_tests_helper.cpp
     param_set_and_get.cpp
+    param_get_all.cpp
     param_custom_set_and_get.cpp
     mission_raw_upload.cpp
 )
