--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(system_tests_runner
     param_get_all.cpp
     param_custom_set_and_get.cpp
     mission_raw_upload.cpp
+    telemetry_subscription.cpp
 )
 
 target_include_directories(system_tests_runner
