--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -683,7 +683,7 @@ jobs:
     container: mavsdk/mavsdk-ubuntu-20.04-px4-sitl-${{ matrix.px4_version }}
     strategy:
       matrix:
-        px4_version: [v1.11, v1.12]
+        px4_version: [v1.11, v1.12, v1.13]
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
