Try with OpenSSL::SSL

--- a/src/mavsdk/CMakeLists.txt
+++ b/src/mavsdk/CMakeLists.txt
@@ -11,11 +11,13 @@ find_package(jsoncpp REQUIRED)
 hunter_add_package(tinyxml2)
 find_package(tinyxml2 REQUIRED)
 
+find_package(OpenSSL REQUIRED)
+
 target_link_libraries(mavsdk
     PRIVATE
     JsonCpp::JsonCpp
     tinyxml2::tinyxml2
-    ssl
+    OpenSSL::SSL
 )
 
 if (NOT APPLE AND NOT ANDROID AND NOT MSVC)
