--- a/src/mavsdk/CMakeLists.txt
+++ b/src/mavsdk/CMakeLists.txt
@@ -25,7 +25,7 @@ if (NOT APPLE AND NOT ANDROID AND NOT MSVC)
 endif()
 
 target_include_directories(mavsdk
-    SYSTEM PRIVATE ${MAVLINK_HEADERS}
+    SYSTEM PUBLIC ${MAVLINK_HEADERS}
 )
 
 set(UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES} PARENT_SCOPE)
