build system: another round of include fixing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,7 +64,7 @@ if(BUILD_TESTS)
 
     add_subdirectory(integration_tests)
 
-    include(cmake/unit_tests.cmake)
+    add_subdirectory(unit_tests)
 
     add_subdirectory(system_tests)
 endif()
